# eme-mode

./: .gitignore  Cargo.toml  README.md
.github/workflows/: eme-mode.yml
src/: lib.rs
tests/: lib.rs
