[package]
name = "eme-mode"
version = "0.1.1-pre"
description = "EME block cipher mode of operation"
authors = ["Fabian Möller <fabianm88@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["crypto", "block-cipher", "ciphers"]
categories = ["cryptography"]
repository = "https://github.com/B4dM4n/eme-block-mode"
edition = "2018"

[dependencies]
block-modes = { version = "0.8.1", default-features = false }
block-padding = "0.2.1"
cipher = "0.3.0"

[dev-dependencies]
aes = "0.7.5"

[features]
default = ["std"]
std = ["block-modes/std"]
