[package]
name = "eme-mode"
version = "0.3.1"
description = "EME block cipher mode of operation"
authors = ["Fabian Möller <fabianm88@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["crypto", "block-cipher", "ciphers"]
categories = ["cryptography"]
repository = "https://github.com/B4dM4n/eme-mode-rs"
edition = "2021"

[dependencies]
cipher = "0.4.3"

[dev-dependencies]
aes = "0.8.1"

[features]
default = ["block-padding"]
alloc = ["cipher/alloc"]
std = ["cipher/std", "alloc"]
block-padding = ["cipher/block-padding"]
zeroize = ["cipher/zeroize"]
